--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.1.2",
-    "@mui/material": "^7.1.2",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^6.4.12",
+    "@mui/material": "^6.4.12",
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
@@ -31,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "mammoth": "^1.9.1",
+    "terser": "^5.43.1",
     "vite": "^7.0.0"
   }
 }
