--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "clsx": "^2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "terser": "^5.43.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -31,7 +32,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "mammoth": "^1.9.1",
-    "terser": "^5.43.1",
     "vite": "^7.0.0"
   }
 }
